# 0003_HSMB

./: .claudeignore  .env  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  cclaude.bat  cclaude.sh  ccodex.bat  gemma.ps1  gemma.sh  ps2010_v1_hsmb_recalc.py  pyproject.toml  verify_hsmb_d0900.py
.agents/skills/: .ccporting_audit_report.json  ccporting_manifest_all.json
.claude/: CLAUDE.md  CLAUDE.md.backup.2026-04-02_105320  CLAUDE.md.backup.2026-04-02_111745  CLAUDE.md.backup.2026-04-15_220233  CLAUDE.md.backup.2026-04-17_173724  ORCHESTRATOR.md  PERSONAS.md  agents.md  claudian-settings.json  gsd-file-manifest.json  settings.json  settings.local.json
.claude/agents/: academic-researcher.md  ai-engineer.md  code-error-checker.md  code-reviewer.md  codebase_investigator.md  data-analyst.md  data-engineer.md  data-scientist.md  gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  ooqa.md  (+23 more)
.codex/: config.toml
.github/: copilot-instructions.md
.omc/: project-memory.json
00_doc/: d0001_prd.md  d0004_todo.md  d0010_history.md  d0800_수정안의견.md  migrate_to_sp_folders.py  xxx.md  zzz.md
scripts/: patch_cpbd.py
src/: common_corr.py  common_iqa7.py  ps0000_python_template_v08.py  ps0001_pytorch_gpu_test.py  ps2000_통합IQA.py  ps2010_HSMBv1_재계산.py  ps2020_hsmb_v1.py  ps3010_e3_1_ps1010_iqa.py  ps3011_e3_1_sfr_correlation.py  ps3020_e3_2_ps1301_iqa.py  ps3030_e3_3_ps1302_iqa.py  ps3040_e3_4_pool_iqa.py  ps3100_e1_1_ps1204_iqa.py  ps3101_e1_2_bew_correlation.py  ps5101_pytorch_gpu_test_v01.py
(+1418 files in other folders)
