[project]
name = "0003-hsmb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cpbd>=1.0.7",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyiqa>=0.1.15.post2",
    "scikit-image>=0.26.0",
    "torch>=2.6.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pylint>=3.0",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
]
